--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,20 +1,10 @@
 site_name: CODA RC Web
-docs_dir: ./Transdev
+docs_dir: ./docs
 theme:
   name: 'material'
   features:
     - content.code.copy
     
-plugins:
-  - include-markdown:
-      opening_tag: "![["
-      closing_tag: "]]"
-      encoding: ascii
-      preserve_includer_indent: false
-      dedent: true
-      trailing_newlines: false
-      comments: false
-
 markdown_extensions:
   - admonition
   - pymdownx.details
