--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ theme:
     - content.code.copy
     
 markdown_extensions:
+  - def_list
   - admonition
   - pymdownx.details
   - pymdownx.superfences
